--- a/.env.development
+++ b/.env.development
@@ -9,22 +9,22 @@ ECOMMERCE_BASE_URL='http://localhost:18130'
 ENABLE_DEMOGRAPHICS_COLLECTION=''
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
-LMS_BASE_URL='http://localhost:18000'
-LOGIN_URL='http://localhost:18000/login'
+LMS_BASE_URL='http://local.overhang.io:8000'
+LOGIN_URL='http://local.overhang.io:8000/login'
 LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
-LOGOUT_URL='http://localhost:18000/logout'
+LOGOUT_URL='http://local.overhang.io:8000/logout'
 MARKETING_SITE_BASE_URL='http://localhost:5335'
 NODE_ENV='development'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 PORT=1997
 PUBLISHER_BASE_URL=''
-REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
+REFRESH_ACCESS_TOKEN_ENDPOINT='http://local.overhang.io:8000/login_refresh'
 SEGMENT_KEY=''
 SITE_NAME=localhost
 STUDIO_BASE_URL=''
-SUPPORT_URL='http://localhost:18000/support'
+SUPPORT_URL='http://local.overhang.io:8000/support'
 USER_INFO_COOKIE_NAME='edx-user-info'
 ENABLE_COPPA_COMPLIANCE=''
 MARKETING_EMAILS_OPT_IN=''
