--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "10.2.0",
     "@edx/frontend-component-header": "2.4.5",
-    "@edx/frontend-platform": "npm:@zephyrphone1/ohstem-frontend-platform@1.16.6",
+    "@edx/frontend-platform": "1.15.1",
     "@edx/paragon": "19.6.0",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "5.15.4",
